better symantic tags, added content to footer

--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
     <link rel="shortcut icon" href="/favicon.ico"/>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"/>
     <link rel="manifest" href="/site.webmanifest"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
+    <header>
         <div class="logo">
             <h1>aquatica</h1>
         </div>
-    </nav>
+    </header>
     <div class="hero">
         <img class="bg" src="./assets/ocean_bg.webp" alt="ocean depths">
         <img class="turtle" src="./assets/turtle.webp" alt="turtle">
@@ -144,39 +145,38 @@
         <footer>
             <div class="container">
                 <div class="section">
-                    <h3>placeholder</h3>
+                    <h3>overview</h3>
                     <ul>
-                        <li>placeholder</li>
-                        <li>placeholder</li>
-                        <li>placeholder</li>
-                        <li>placeholder</li>
+                        <li>pricing</li>
+                        <li>services</li>
+                        <li>career</li>
+                        <li>press kit</li>
                     </ul>
                 </div>
                 <div class="section">
-                    <h3>placeholder</h3>
+                    <h3>contact</h3>
                     <ul>
-                        <li>placeholder</li>
-                        <li>placeholder</li>
-                        <li>placeholder</li>
-                        <li>placeholder</li>
+                        <li>fax</li>
+                        <li>email</li>
+                        <li>phone</li>
                     </ul>
                 </div>
                 <div class="section">
-                    <h3>placeholder</h3>
+                    <h3>about</h3>
                     <ul>
-                        <li>placeholder</li>
-                        <li>placeholder</li>
-                        <li>placeholder</li>
-                        <li>placeholder</li>
+                        <li>marine life</li>
+                        <li>science</li>
+                        <li>products</li>
+                        <li>equipment</li>
                     </ul>
                 </div>
                 <div class="section">
-                    <h3>placeholder</h3>
+                    <h3>socials</h3>
                     <ul>
-                        <li>placeholder</li>
-                        <li>placeholder</li>
-                        <li>placeholder</li>
-                        <li>placeholder</li>
+                        <li><i class="fa-brands fa-facebook"></i> facebook</li>
+                        <li><i class="fa-brands fa-instagram"></i> instagram</li>
+                        <li><i class="fa-brands fa-reddit"></i> reddit</li>
+                        <li><i class="fa-brands fa-tiktok"></i> tik-tok</li>
                     </ul>
                 </div>
             </div>
