--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
     <link rel="manifest" href="/site.webmanifest"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="style.css">
+    <script defer src="./script.js"></script>
 </head>
 <body>
+    <!-- logo -->
     <header>
-        <div class="logo">
-            <h1>aquatica</h1>
-        </div>
+        <h1 class="logo-small">aquatica</h1>
+        <h1 class="logo-large">aquatica</h1>
     </header>
     <div class="hero">
         <img class="bg" src="./assets/ocean_bg.webp" alt="ocean depths">
