added pallarax turtle on scroll, and other minor adjustments

--- a/index.html
+++ b/index.html
@@ -22,21 +22,22 @@
         <h1 class="logo-small">aquatica</h1>
         <h1 class="logo-large">aquatica</h1>
     </header>
+    <!-- hero -->
     <div class="hero">
-        <img class="bg" src="./assets/ocean_bg.webp" alt="ocean depths">
-        <img class="turtle" src="./assets/turtle.webp" alt="turtle">
+        <img draggable="false" class="bg" src="./assets/ocean_bg.webp" alt="ocean depths">
+        <img id="turtle" draggable="false" src="./assets/turtle.webp" alt="turtle">
     </div>
     <main>
         <!-- placeholder -->
         <section>
         <div class="grid-container">
             <div class="left">
-                <img src="https://picsum.photos/1920/1080" alt="">
+                <img draggable="false" src="https://picsum.photos/1920/1080" alt="">
             </div>
             <div class="right">
                 <h2>placeholder</h2>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam recusandae, quo aspernatur esse quaerat delectus fugiat tempora minima quis voluptatum cumque architecto quia necessitatibus autem, eos similique! Harum maiores, necessitatibus natus accusamus eum dignissimos eos voluptate sequi, perspiciatis ea omnis.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam recusandae, quo aspernatur esse quaerat delectus fugiat tempora minima quhis voluptatum cumque architecto quia necessitatibus autem, eos similique! Harum maiores, necessitatibus natus accusamus eum dignissimos eos voluptate sequi, perspiciatis ea omnis.</p>
 
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis delectus distinctio esse quisquam a commodi hic impedit explicabo. Fuga cum voluptatem aperiam soluta, ipsum facere?</p>
 
@@ -57,7 +58,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt porro</p>
             </div>
             <div class="right">
-                <img src="https://picsum.photos/1920/1080" alt="">
+                <img draggable="false" src="https://picsum.photos/1920/1080" alt="">
             </div>
         </div>
         </section>
@@ -71,7 +72,7 @@
         <!-- placeholder -->
         <div class="grid-container">
             <div class="left">
-                <img src="https://picsum.photos/1920/1080" alt="">
+                <img draggable="false" src="https://picsum.photos/1920/1080" alt="">
             </div>
             <div class="right">
                 <h2>placeholder</h2>
@@ -96,7 +97,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt porro</p>
                 </div>
                 <div class="right">
-                    <img src="https://picsum.photos/1920/1080" alt="">
+                    <img draggable="false" src="https://picsum.photos/1920/1080" alt="">
                 </div>
             </div>
         </section>
@@ -117,13 +118,13 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt porro</p>
             </div>
             <div class="right">
-                <img src="https://picsum.photos/1920/1080" alt="">
+                <img draggable="false" src="https://picsum.photos/1920/1080" alt="">
             </div>
         </div>
         <!-- placeholder -->
         <div class="grid-container">
             <div class="left">
-                <img src="https://picsum.photos/1920/1080" alt="">
+                <img draggable="false" src="https://picsum.photos/1920/1080" alt="">
             </div>
             <div class="right">
                 <h2>placeholder</h2>
