--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 <body>
     <!-- logo -->
     <header>
-        <h1 class="logo-small">aquatica</h1>
-        <h1 class="logo-large">aquatica</h1>
+        <h1 class="logo">aquatica</h1>
     </header>
     <!-- hero -->
     <div class="hero">
