minor content added, along with an external button link

--- a/index.html
+++ b/index.html
@@ -14,12 +14,17 @@
     <link rel="manifest" href="/site.webmanifest"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.google.com/">
     <script defer src="./script.js"></script>
 </head>
 <body>
     <!-- logo -->
     <header>
+        <ul>
+            <li>login</li>
+            <li>|</li>
+            <li>sign in</li>
+        </ul>
+
         <h1 class="logo">aquatica</h1>
     </header>
     <!-- hero -->
@@ -58,11 +63,15 @@
             </div>
         </div>
         </section>
-        <!-- placeholder -->
+        <!-- oceana charity -->
         <section>
             <div class="banner">
-                <h2>placeholder</h2>
+                <h2>oceana</h2>
+                <h2>protecting the world's oceans</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id amet ipsa soluta alias laudantium asperiores nemo nobis ut adipisci veritatis, aperiam officia fugit, itaque eos?</p>
+                <div role="button" class="btn" aria-label="button that opens an external link">
+                    <a target="_blank" href="https://oceana.org/resources/ways-to-give-donate-now/">donate</a>
+                </div>
             </div>
         </section>
         <!-- endangered species -->
