marquee was added

--- a/index.html
+++ b/index.html
@@ -105,9 +105,87 @@
             </div>
         </section>
         <!-- placeholder -->
-        <div class="horizontal-scroll">
-            <h2>placeholder</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos sequi id earum obcaecati doloribus voluptates.</p>
+        <div class="banner">
+            <h2>marine life</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos sequi.</p>
+
+            <div class="marquee">
+                <ul>
+                    <li>
+                        <span><i class="fa-solid fa-fish-fins"></i></span>
+                        <span class="name">placeholder</span>
+                    </li>
+                    <li>
+                        <span><i class="fa-solid fa-fish-fins"></i></span>
+                        <span class="name">placeholder</span>
+                    </li>
+                    <li>
+                        <span><i class="fa-solid fa-fish-fins"></i></span>
+                        <span class="name">placeholder</span>
+                    </li>
+                    <li>
+                        <span><i class="fa-solid fa-fish-fins"></i></span>
+                        <span class="name">placeholder</span>
+                    </li>
+                    <li>
+                        <span><i class="fa-solid fa-fish-fins"></i></span>
+                        <span class="name">placeholder</span>
+                    </li>
+                    <li>
+                        <span><i class="fa-solid fa-fish-fins"></i></span>
+                        <span class="name">placeholder</span>
+                    </li>
+                    <li>
+                        <span><i class="fa-solid fa-fish-fins"></i></span>
+                        <span class="name">placeholder</span>
+                    </li>                    <li>
+                        <span><i class="fa-solid fa-fish-fins"></i></span>
+                        <span class="name">placeholder</span>
+                    </li>
+                    <li>
+                        <span><i class="fa-solid fa-fish-fins"></i></span>
+                        <span class="name">placeholder</span>
+                    </li>
+                </ul>
+
+                <ul aria-hidden="false">
+                    <li>
+                        <span><i class="fa-solid fa-fish-fins"></i></span>
+                        <span class="name">placeholder</span>
+                    </li>
+                    <li>
+                        <span><i class="fa-solid fa-fish-fins"></i></span>
+                        <span class="name">placeholder</span>
+                    </li>
+                    <li>
+                        <span><i class="fa-solid fa-fish-fins"></i></span>
+                        <span class="name">placeholder</span>
+                    </li>
+                    <li>
+                        <span><i class="fa-solid fa-fish-fins"></i></span>
+                        <span class="name">placeholder</span>
+                    </li>
+                    <li>
+                        <span><i class="fa-solid fa-fish-fins"></i></span>
+                        <span class="name">placeholder</span>
+                    </li>
+                    <li>
+                        <span><i class="fa-solid fa-fish-fins"></i></span>
+                        <span class="name">placeholder</span>
+                    </li>
+                    <li>
+                        <span><i class="fa-solid fa-fish-fins"></i></span>
+                        <span class="name">placeholder</span>
+                    </li>                    <li>
+                        <span><i class="fa-solid fa-fish-fins"></i></span>
+                        <span class="name">placeholder</span>
+                    </li>
+                    <li>
+                        <span><i class="fa-solid fa-fish-fins"></i></span>
+                        <span class="name">placeholder</span>
+                    </li>
+                </ul>
+            </div>
         </div>
         <!-- ocean environment -->
         <div class="grid-container">
