added content to the marquee

--- a/index.html
+++ b/index.html
@@ -113,76 +113,76 @@
                 <ul>
                     <li>
                         <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">placeholder</span>
+                        <span class="name">sea turtle</span>
                     </li>
                     <li>
                         <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">placeholder</span>
+                        <span class="name">whale shark</span>
                     </li>
                     <li>
                         <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">placeholder</span>
+                        <span class="name">dugong</span>
                     </li>
                     <li>
                         <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">placeholder</span>
+                        <span class="name">pacific salmon</span>
                     </li>
                     <li>
                         <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">placeholder</span>
+                        <span class="name">seal lions</span>
                     </li>
                     <li>
                         <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">placeholder</span>
+                        <span class="name">porpoises</span>
                     </li>
                     <li>
                         <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">placeholder</span>
-                    </li>                    <li>
+                        <span class="name">bluefin tuna</span>
+                    <li>
                         <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">placeholder</span>
+                        <span class="name">great white shark</span>
                     </li>
                     <li>
                         <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">placeholder</span>
+                        <span class="name">manatee</span>
                     </li>
                 </ul>
 
                 <ul aria-hidden="false">
                     <li>
                         <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">placeholder</span>
+                        <span class="name">sea turtle</span>
                     </li>
                     <li>
                         <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">placeholder</span>
+                        <span class="name">whale shark</span>
                     </li>
                     <li>
                         <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">placeholder</span>
+                        <span class="name">dugong</span>
                     </li>
                     <li>
                         <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">placeholder</span>
+                        <span class="name">pacific salmon</span>
                     </li>
                     <li>
                         <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">placeholder</span>
+                        <span class="name">seal lions</span>
                     </li>
                     <li>
                         <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">placeholder</span>
+                        <span class="name">porpoises</span>
                     </li>
                     <li>
                         <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">placeholder</span>
-                    </li>                    <li>
+                        <span class="name">bluefin tuna</span>
+                    <li>
                         <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">placeholder</span>
+                        <span class="name">great white shark</span>
                     </li>
                     <li>
                         <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">placeholder</span>
+                        <span class="name">manatee</span>
                     </li>
                 </ul>
             </div>
