--- a/index.html
+++ b/index.html
@@ -110,81 +110,28 @@
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos sequi.</p>
 
             <div class="marquee">
-                <ul>
-                    <li>
-                        <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">sea turtle</span>
-                    </li>
-                    <li>
-                        <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">whale shark</span>
-                    </li>
-                    <li>
-                        <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">dugong</span>
-                    </li>
-                    <li>
-                        <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">pacific salmon</span>
-                    </li>
-                    <li>
-                        <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">seal lions</span>
-                    </li>
-                    <li>
-                        <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">porpoises</span>
-                    </li>
-                    <li>
-                        <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">bluefin tuna</span>
-                    <li>
-                        <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">great white shark</span>
-                    </li>
-                    <li>
-                        <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">manatee</span>
-                    </li>
-                </ul>
-
-                <ul aria-hidden="false">
-                    <li>
-                        <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">sea turtle</span>
-                    </li>
-                    <li>
-                        <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">whale shark</span>
-                    </li>
-                    <li>
-                        <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">dugong</span>
-                    </li>
-                    <li>
-                        <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">pacific salmon</span>
-                    </li>
-                    <li>
-                        <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">seal lions</span>
-                    </li>
-                    <li>
-                        <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">porpoises</span>
-                    </li>
-                    <li>
-                        <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">bluefin tuna</span>
-                    <li>
-                        <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">great white shark</span>
-                    </li>
-                    <li>
-                        <span><i class="fa-solid fa-fish-fins"></i></span>
-                        <span class="name">manatee</span>
-                    </li>
-                </ul>
+                <div class="content">
+                    <p>sea turtle</p>
+                    <p>whale shark</p>
+                    <p>dugong</p>
+                    <p>pacific salmon</p>
+                    <p>sea lions</p>
+                    <p>porpoises</p>
+                    <p>bluefin tuna</p>
+                    <p>great white shark</p>
+                    <p>manatee</p>
+                </div>
+                <div class="content">
+                    <p>sea turtle</p>
+                    <p>whale shark</p>
+                    <p>dugong</p>
+                    <p>pacific salmon</p>
+                    <p>sea lions</p>
+                    <p>porpoises</p>
+                    <p>bluefin tuna</p>
+                    <p>great white shark</p>
+                    <p>manatee</p>
+                </div>
             </div>
         </div>
         <!-- ocean environment -->
