minor header changes

--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
         <ul>
             <li>login</li>
             <li>|</li>
-            <li>sign in</li>
+            <li>join</li>
+            <li>|</li>
+            <li>explore</li>
         </ul>
 
         <h1 class="logo">aquatica</h1>
     </header>
     <!-- hero -->
     <div class="hero">
-        <img draggable="false" class="bg" src="./assets/ocean_bg.webp" alt="ocean depths">
+        <img width="1920" height="1080" draggable="false" class="bg" src="./assets/ocean_bg.webp" alt="ocean depths">
         <img id="turtle" draggable="false" src="./assets/turtle.webp" alt="turtle">
     </div>
     <main>
