minor improvements and adjustments

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id amet ipsa soluta alias laudantium asperiores nemo nobis ut adipisci veritatis, aperiam officia fugit, itaque eos?</p>
             </div>
         </section>
-        <!-- ocean animations-->
+        <!-- ocean waves animation -->
         <div class="waves-container">
             <svg class="waves-svg" viewBox="0 25 150 20" preserveAspectRation="none" shape-rendering="auto">
                 <defs>
