minor improvements to footer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script defer src="./script.js"></script>
 </head>
 <body>
-    <!-- logo -->
+    <!-- header -->
     <header>
         <ul>
             <li>login</li>
@@ -26,7 +26,6 @@
             <li>|</li>
             <li>explore</li>
         </ul>
-
         <h1 class="logo">aquatica</h1>
     </header>
     <!-- hero -->
@@ -106,7 +105,7 @@
                 </div>
             </div>
         </section>
-        <!-- placeholder -->
+        <!-- vulnerable & risk of extinction species -->
         <div class="banner">
             <h2>marine life</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos sequi.</p>
@@ -191,42 +190,40 @@
         </div>
         <!-- footer -->
         <footer>
-            <div class="container">
-                <div class="section">
-                    <h3>overview</h3>
-                    <ul>
-                        <li>pricing</li>
-                        <li>services</li>
-                        <li>career</li>
-                        <li>press kit</li>
-                    </ul>
-                </div>
-                <div class="section">
-                    <h3>contact</h3>
-                    <ul>
-                        <li>fax</li>
-                        <li>email</li>
-                        <li>phone</li>
-                    </ul>
-                </div>
-                <div class="section">
-                    <h3>about</h3>
-                    <ul>
-                        <li>marine life</li>
-                        <li>science</li>
-                        <li>products</li>
-                        <li>equipment</li>
-                    </ul>
-                </div>
-                <div class="section">
-                    <h3>socials</h3>
-                    <ul>
-                        <li><i class="fa-brands fa-facebook"></i> facebook</li>
-                        <li><i class="fa-brands fa-instagram"></i> instagram</li>
-                        <li><i class="fa-brands fa-reddit"></i> reddit</li>
-                        <li><i class="fa-brands fa-tiktok"></i> tik-tok</li>
-                    </ul>
-                </div>
+            <div class="section">
+                <h3>overview</h3>
+                <ul>
+                    <li>pricing</li>
+                    <li>services</li>
+                    <li>career</li>
+                    <li>press kit</li>
+                </ul>
+            </div>
+            <div class="section">
+                <h3>contact</h3>
+                <ul>
+                    <li>fax</li>
+                    <li>email</li>
+                    <li>phone</li>
+                </ul>
+            </div>
+            <div class="section">
+                <h3>about</h3>
+                <ul>
+                    <li>marine life</li>
+                    <li>science</li>
+                    <li>products</li>
+                    <li>equipment</li>
+                </ul>
+            </div>
+            <div class="section">
+                <h3>socials</h3>
+                <ul>
+                    <li><i class="fa-brands fa-facebook"></i> facebook</li>
+                    <li><i class="fa-brands fa-instagram"></i> instagram</li>
+                    <li><i class="fa-brands fa-reddit"></i> reddit</li>
+                    <li><i class="fa-brands fa-tiktok"></i> tik-tok</li>
+                </ul>
             </div>
         </footer>
     </main>
