changes to hero for better performance, and minor content added

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
     <!-- hero -->
     <div class="hero">
         <img width="1920" height="1080" draggable="false" class="bg" src="./assets/ocean_bg.webp" alt="ocean depths">
-        <img id="turtle" draggable="false" src="./assets/turtle.webp" alt="turtle">
     </div>
     <main>
         <!-- great barrier reef -->
@@ -105,10 +104,10 @@
                 </div>
             </div>
         </section>
-        <!-- vulnerable & risk of extinction species -->
+        <!-- vulnerable / risk of extinction species -->
         <div class="banner">
             <h2>marine life</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos sequi.</p>
+            <p>These species are either vulnerable or at risk of extinction!</p>
 
             <div class="marquee">
                 <div class="content">
@@ -163,7 +162,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt porro</p>
             </div>
         </div>
-        <!-- placeholder -->
+        <!-- make a change -->
         <section>
             <div class="banner">
                 <h2>placeholder</h2>
