--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"/>
     <link rel="manifest" href="/site.webmanifest"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Didact+Gothic&family=Paytone+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script defer src="./script.js"></script>
 </head>
@@ -184,8 +187,8 @@
             </svg>
         </div>
         <div class="shark-container">
-            <img class="shark shark-left" src="./assets/shark.svg" alt="">
-            <img class="shark shark-right" src="./assets/shark.svg" alt="">
+            <img width="1920" height="1080" class="shark shark-left" src="./assets/shark.svg" alt="">
+            <img width="1920" height="1080" class="shark shark-right" src="./assets/shark.svg" alt="">
         </div>
         <!-- footer -->
         <footer>
