added content to first section, and banners

--- a/index.html
+++ b/index.html
@@ -43,23 +43,23 @@
                 <img width="1920" height="1080" draggable="false" src="./assets/great_barrier_reef.webp" alt="great barrier reef">
             </div>
             <div class="right">
-                <h2>placeholder</h2>
+                <h2>the great barrier reef</h2>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam recusandae, quo aspernatur esse quaerat delectus fugiat tempora minima quhis voluptatum cumque architecto quia necessitatibus autem, eos similique! Harum maiores, necessitatibus natus accusamus eum dignissimos eos voluptate sequi, perspiciatis ea omnis.</p>
+                <p>The Great Barrier Reef is located in the Coral Sea, which is situated in Australia's northeastern coast. It's truly an incredible site to behold, and it's home to the world's largest collection of coral reefs.</p>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis delectus distinctio esse quisquam a commodi hic impedit explicabo. Fuga cum voluptatem aperiam soluta, ipsum facere?</p>
+                <p>Unfortunately however the Great Coral Reef is in danger of extinction, due to changes in the waters temperatures along with poor ocean water quality, which is partly because of pollution and the many changes in our climate over the years.</p>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt porro</p>
+                <p>Everyone can make a change by reducing their carbon emissions, and by being respectful of the marine life that inhabits the coral reefs.</p>
             </div>
 
             <div class="left">
-                <h2>placeholder</h2>
+                <h2>Home to marine life</h2>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam recusandae, quo aspernatur esse quaerat delectus fugiat tempora minima quis voluptatum cumque architecto quia necessitatibus autem, eos similique! Harum maiores, necessitatibus natus accusamus eum dignissimos eos voluptate sequi, perspiciatis ea omnis.</p>
+                <p>The Great Barrier Reef is also the home of over one thousand different species of fish, as well as being home to many different species of coral.</p>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis delectus distinctio esse quisquam a commodi hic impedit explicabo. Fuga cum voluptatem aperiam soluta, ipsum facere?</p>
+                <p>Over 400 species of coral can be found at the Great Barrier Reef, and they benefit provide a variety of benefits to the enviroment such as providing a habitat for marine life, helping to mitigate climate change and helping to maintain water quality, by filtrating carbon monoxide.</p>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt porro</p>
+                <p>As you can see this wonderful place is important to the preservation of our ocean, and you can help to make a change.</p>
             </div>
             <div class="right">
                 <img width="1920" height="1080" draggable="false" src="./assets/barrier_reef_fish.webp" alt="great barrier reef fish">
@@ -71,7 +71,7 @@
             <div class="banner">
                 <h2>oceana</h2>
                 <h2>protecting the world's oceans</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id amet ipsa soluta alias laudantium asperiores nemo nobis ut adipisci veritatis, aperiam officia fugit, itaque eos?</p>
+                <p>Campaigning to restore our oceans to the way it once was, by increasing marine bio diversity and protecting our oceans for generations to come!</p>
                 <div role="button" class="btn" aria-label="button that opens an external link">
                     <a target="_blank" href="https://oceana.org/resources/ways-to-give-donate-now/">donate</a>
                 </div>
@@ -168,8 +168,8 @@
         <!-- make a change -->
         <section>
             <div class="banner">
-                <h2>placeholder</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id amet ipsa soluta alias laudantium asperiores nemo nobis ut adipisci veritatis, aperiam officia fugit, itaque eos?</p>
+                <h2>make a change</h2>
+                <p>Only you can a make a change to help our oceans ecosystem, not only from the pollution but to help preserve the oceans wildlife, it's not too late to make a difference!</p>
             </div>
         </section>
         <!-- ocean waves animation -->
