added page jump, along with other minor adjustments

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </section>
         <!-- oceana charity -->
         <section>
-            <div class="banner">
+            <div class="banner" id="donate">
                 <h2>oceana</h2>
                 <h2>protecting the world's oceans</h2>
                 <p>Campaigning to restore our oceans to the way it once was, by increasing marine bio diversity and protecting our oceans for generations to come!</p>
@@ -107,7 +107,7 @@
                 </div>
             </div>
         </section>
-        <!-- vulnerable / risk of extinction species -->
+        <!-- vulnerable / risk of extinction -->
         <div class="banner">
             <h2>marine life</h2>
             <p>These species are either vulnerable or at risk of extinction!</p>
@@ -167,7 +167,7 @@
         <section>
             <div class="banner">
                 <h2>make a change</h2>
-                <p>Only you can a make a change to help our oceans ecosystem, not only from the pollution but to help preserve the oceans wildlife, it's not too late to make a difference!</p>
+                <p>Only you can a <a href="./index.html#donate"><span>make a change</span></a> to help our oceans ecosystem, not only from the pollution but to help preserve the oceans wildlife, it's not too late to make a difference!</p>
             </div>
         </section>
         <!-- ocean waves animation -->
