minor changes to footer

--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
             <!-- footer -->
             <footer>
                 <div class="section">
-                    <h3>overview</h3>
                     <ul>
+                        <li><span>overview</span></li>
                         <li>pricing</li>
                         <li>services</li>
                         <li>career</li>
@@ -197,16 +197,16 @@
                     </ul>
                 </div>
                 <div class="section">
-                    <h3>contact</h3>
                     <ul>
+                        <li><span>contact</span></li>
                         <li>fax</li>
                         <li>email</li>
                         <li>phone</li>
                     </ul>
                 </div>
                 <div class="section">
-                    <h3>about</h3>
                     <ul>
+                        <li><span>about</span></li>
                         <li>marine life</li>
                         <li>science</li>
                         <li>products</li>
@@ -214,8 +214,8 @@
                     </ul>
                 </div>
                 <div class="section">
-                    <h3>socials</h3>
                     <ul>
+                        <li><span>socials</span></li>
                         <li><i class="fa-brands fa-facebook"></i> facebook</li>
                         <li><i class="fa-brands fa-instagram"></i> instagram</li>
                         <li><i class="fa-brands fa-reddit"></i> reddit</li>
