added mobile logo

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <!-- header -->
         <header>
             <ul>
+                <li><span>aquatica</span></li>
                 <li>login</li>
                 <li>|</li>
                 <li>join</li>
